--- a/BeatSaberTools/BeatSaberTools.csproj
+++ b/BeatSaberTools/BeatSaberTools.csproj
@@ -60,14 +60,17 @@
 
 	<ItemGroup>
 	  <None Remove="Pages\MapBrowser.razor.css" />
+	  <None Remove="Pages\MapBrowserRow.razor.css" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <Content Include="Pages\MapBrowser.razor.css" />
+	  <Content Include="Pages\MapBrowserRow.razor.css" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <PackageReference Include="MudBlazor" Version="6.0.4" />
+	  <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
 	  <PackageReference Include="System.Reactive" Version="4.4.1">
 	    <Aliases></Aliases>
 	  </PackageReference>
