--- a/BeatSaberTools/BeatSaberTools.csproj
+++ b/BeatSaberTools/BeatSaberTools.csproj
@@ -70,6 +70,8 @@
 
 	<ItemGroup>
 	  <PackageReference Include="MudBlazor" Version="6.0.4" />
+	  <PackageReference Include="NAudio" Version="2.0.1" />
+	  <PackageReference Include="NAudio.Vorbis" Version="1.5.0" />
 	  <PackageReference Include="NVorbis" Version="0.10.4" />
 	  <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
 	  <PackageReference Include="System.Reactive" Version="4.4.1">
