--- a/BeatSaberTools/BeatSaberTools.csproj
+++ b/BeatSaberTools/BeatSaberTools.csproj
@@ -71,6 +71,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="BeatSaber.SongHashing" Version="1.1.1" />
+	  <PackageReference Include="Microsoft.VisualStudio.Utilities" Version="17.0.31902.203" />
 	  <PackageReference Include="MudBlazor" Version="6.0.4" />
 	  <PackageReference Include="NAudio" Version="2.0.1" />
 	  <PackageReference Include="NAudio.Vorbis" Version="1.5.0" />
