--- a/BeatSaberTools/BeatSaberTools.csproj
+++ b/BeatSaberTools/BeatSaberTools.csproj
@@ -55,6 +55,7 @@
 
     <ItemGroup>
       <PackageReference Include="BeatSaber.SongHashing" Version="1.1.1" />
+      <PackageReference Include="BeatSaberPlaylistsLib" Version="1.6.6" />
       <PackageReference Include="Microsoft.VisualStudio.Utilities" Version="17.2.32505.113" />
       <PackageReference Include="MudBlazor" Version="6.0.12" />
       <PackageReference Include="NAudio" Version="2.1.0" />
