--- a/BeatSaberTools.Worker/BeatSaberTools.Worker.csproj
+++ b/BeatSaberTools.Worker/BeatSaberTools.Worker.csproj
@@ -15,4 +15,9 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="6.0.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BeatSaberTools.Core\BeatSaberTools.Core.csproj" />
+    <ProjectReference Include="..\BeatSaberTools.Infrastructure\BeatSaberTools.Infrastructure.csproj" />
+  </ItemGroup>
 </Project>
