--- a/BeatSaberTools/BeatSaberTools.csproj
+++ b/BeatSaberTools/BeatSaberTools.csproj
@@ -63,6 +63,12 @@
       <LangVersion>preview</LangVersion>
     </PropertyGroup>
 
+	<PropertyGroup Condition="$(TargetFramework.Contains('-windows')) and '$(Configuration)' == 'Release'">
+		<GenerateAppxPackageOnBuild>true</GenerateAppxPackageOnBuild>
+		<AppxPackageSigningEnabled>true</AppxPackageSigningEnabled>
+		<PackageCertificateThumbprint>D22CA82E061147321380CEC05DB9133A29AF0904</PackageCertificateThumbprint>
+	</PropertyGroup>
+
     <ItemGroup>
         <!-- App Icon -->
         <MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
