Scoresaber integration start

--- a/BeatSaberTools.Infrastructure/BeatSaberTools.Infrastructure.csproj
+++ b/BeatSaberTools.Infrastructure/BeatSaberTools.Infrastructure.csproj
@@ -8,7 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="BeatSaber.SongHashing" Version="1.1.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
