--- a/BeatSaberTools.Worker/BeatSaberTools.Worker.csproj
+++ b/BeatSaberTools.Worker/BeatSaberTools.Worker.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="6.0.0" />
+    <PackageReference Include="Pather.CSharp" Version="2.1.0" />
   </ItemGroup>
 
   <ItemGroup>
