Ranked map download

--- a/BeatSaberTools.Infrastructure/BeatSaberTools.Infrastructure.csproj
+++ b/BeatSaberTools.Infrastructure/BeatSaberTools.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="BeatSaber.SongHashing" Version="1.1.1" />
+    <PackageReference Include="BeatSaverSharper" Version="3.4.4" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
