--- a/BeatSaberTools.Core/BeatSaberTools.Core.csproj
+++ b/BeatSaberTools.Core/BeatSaberTools.Core.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <PackageReference Include="BeatSaber.SongHashing" Version="1.1.1" />
     <PackageReference Include="BeatSaberPlaylistsLib" Version="1.6.6" />
+    <PackageReference Include="BeatSaverSharper" Version="3.4.4" />
     <PackageReference Include="Microsoft.Extensions.ApiDescription.Client" Version="3.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
