--- a/BeatSaberTools.Core/BeatSaberTools.Core.csproj
+++ b/BeatSaberTools.Core/BeatSaberTools.Core.csproj
@@ -12,6 +12,7 @@
     <OpenApiReference Include="OpenAPI\scoresaber-api.json" CodeGenerator="NSwagCSharp" Namespace="BeatSaberTools.Core.ApiClients" ClassName="ScoreSaberApiClient" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="AspNet.Core.UnitOfWork" Version="2.1.0" />
     <PackageReference Include="BeatSaber.SongHashing" Version="1.2.0" />
     <PackageReference Include="BeatSaberPlaylistsLib" Version="1.6.6" />
     <PackageReference Include="BeatSaverSharper" Version="3.4.4" />
