--- a/BeatSaberTools/BeatSaberTools.csproj
+++ b/BeatSaberTools/BeatSaberTools.csproj
@@ -55,6 +55,30 @@
 		<None Include="Worker\**" CopyToPublishDirectory="PreserveNewest" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<None Update="Platforms\Windows\trayicon.ico">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Content Remove="Assets\$placeholder$.altform-lightunplated_targetsize-16.png" />
+	  <Content Remove="Assets\$placeholder$.altform-lightunplated_targetsize-24.png" />
+	  <Content Remove="Assets\$placeholder$.altform-lightunplated_targetsize-256.png" />
+	  <Content Remove="Assets\$placeholder$.altform-lightunplated_targetsize-32.png" />
+	  <Content Remove="Assets\$placeholder$.altform-lightunplated_targetsize-48.png" />
+	  <Content Remove="Assets\$placeholder$.altform-unplated_targetsize-16.png" />
+	  <Content Remove="Assets\$placeholder$.altform-unplated_targetsize-24.png" />
+	  <Content Remove="Assets\$placeholder$.altform-unplated_targetsize-256.png" />
+	  <Content Remove="Assets\$placeholder$.altform-unplated_targetsize-32.png" />
+	  <Content Remove="Assets\$placeholder$.altform-unplated_targetsize-48.png" />
+	  <Content Remove="Assets\$placeholder$.targetsize-16.png" />
+	  <Content Remove="Assets\$placeholder$.targetsize-24.png" />
+	  <Content Remove="Assets\$placeholder$.targetsize-256.png" />
+	  <Content Remove="Assets\$placeholder$.targetsize-32.png" />
+	  <Content Remove="Assets\$placeholder$.targetsize-48.png" />
+	</ItemGroup>
+
     <ItemGroup>
       <PackageReference Include="BeatSaber.SongHashing" Version="1.2.0" />
       <PackageReference Include="BeatSaberPlaylistsLib" Version="1.6.6" />
@@ -66,6 +90,7 @@
       <PackageReference Include="MudBlazor" Version="6.1.6" />
       <PackageReference Include="NAudio" Version="2.1.0" />
       <PackageReference Include="NAudio.Vorbis" Version="1.5.0" />
+      <PackageReference Include="PInvoke.User32" Version="0.7.124" />
       <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
       <PackageReference Include="System.Reactive" Version="5.0.0" />
     </ItemGroup>
