--- a/MapMaven/MapMaven.csproj
+++ b/MapMaven/MapMaven.csproj
@@ -52,6 +52,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<None Update="MapMaven.exe.squirrel">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
 		<None Update="Platforms\Windows\trayicon.ico">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
