--- a/MapMaven/MapMaven.csproj
+++ b/MapMaven/MapMaven.csproj
@@ -20,7 +20,7 @@
         <ApplicationIdGuid>F8C5DDC3-CC19-4F5C-81C5-0FC69948A580</ApplicationIdGuid>
 
         <!-- Versions -->
-        <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
+        <ApplicationDisplayVersion>1.0.0-beta</ApplicationDisplayVersion>
         <ApplicationVersion>1</ApplicationVersion>
 
         <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</SupportedOSPlatformVersion>
