--- a/MapMaven.Core/MapMaven.Core.csproj
+++ b/MapMaven.Core/MapMaven.Core.csproj
@@ -37,6 +37,8 @@
     <PackageReference Include="Pather.CSharp" Version="2.1.0" />
     <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
     <PackageReference Include="System.Reactive" Version="5.0.0" />
+    <PackageReference Include="TestableIO.System.IO.Abstractions" Version="19.2.29" />
+    <PackageReference Include="TestableIO.System.IO.Abstractions.Wrappers" Version="19.2.29" />
   </ItemGroup>
   <ItemGroup Label="ScoreEstimateMLModel">
     <None Include="ScoreEstimation\ScoreEstimateMLModel.consumption.cs">
