--- a/MapMaven.Core.Tests/MapMaven.Core.Tests.csproj
+++ b/MapMaven.Core.Tests/MapMaven.Core.Tests.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
     <PackageReference Include="Moq" Version="4.18.4" />
+    <PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="19.2.29" />
     <PackageReference Include="TestableIO.System.IO.Abstractions" Version="19.2.29" />
     <PackageReference Include="TestableIO.System.IO.Abstractions.Wrappers" Version="19.2.29" />
     <PackageReference Include="xunit" Version="2.4.2" />
