--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,6 +26,8 @@ jobs:
       run: dotnet workload restore
     - name: Restore dependencies
       run: dotnet restore
+    - name: Test
+      run: dotnet test
     - name: Publish
       run: dotnet publish -f net7.0-windows10.0.19041.0 -c Release
       working-directory: "${{ github.workspace }}/MapMaven"
