--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,7 +23,7 @@ jobs:
       with:
         dotnet-version: 7.0.x
     - name: Restore workloads
-      run: dotnet workload restore
+      run: dotnet workload install maui-windows
     - name: Restore dependencies
       run: dotnet restore
     - name: Test
