--- a/MapMaven.Core/MapMaven.Core.csproj
+++ b/MapMaven.Core/MapMaven.Core.csproj
@@ -10,7 +10,7 @@
     <None Remove="OpenAPI\scoresaber-api.json" />
   </ItemGroup>
   <ItemGroup>
-    <OpenApiReference Include="OpenAPI\beatsaver-api.json" CodeGenerator="NSwagCSharp" Namespace="MapMaven.Core.ApiClients.BeatSaver" ClassName="BeatSaverApiClient" />
+    <OpenApiReference Include="OpenAPI\beatsaver-api.json" CodeGenerator="NSwagCSharp" Namespace="MapMaven.Core.ApiClients.BeatSaver" ClassName="BeatSaverApiClient" Options="/UseBaseUrl:false" />
     <OpenApiReference Include="OpenAPI\scoresaber-api.json" CodeGenerator="NSwagCSharp" Namespace="MapMaven.Core.ApiClients.ScoreSaber" ClassName="ScoreSaberApiClient" />
   </ItemGroup>
   <ItemGroup>
