--- a/MapMaven.RankedMapUpdater/MapMaven.RankedMapUpdater.csproj
+++ b/MapMaven.RankedMapUpdater/MapMaven.RankedMapUpdater.csproj
@@ -5,6 +5,7 @@
     <OutputType>Exe</OutputType>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <UserSecretsId>c5b179e0-05eb-475e-96f3-002f9131ba1c</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Azure.Identity" Version="1.9.0" />
