--- a/MapMaven.Core/MapMaven.Core.csproj
+++ b/MapMaven.Core/MapMaven.Core.csproj
@@ -6,10 +6,12 @@
   </PropertyGroup>
   <ItemGroup>
     <None Remove="C:\Users\denni\.nuget\packages\naudio.vorbis\1.5.0\contentFiles\any\netstandard2.0\README.md" />
+    <None Remove="OpenAPI\beatleader-api.json" />
     <None Remove="OpenAPI\beatsaver-api.json" />
     <None Remove="OpenAPI\scoresaber-api.json" />
   </ItemGroup>
   <ItemGroup>
+    <OpenApiReference Include="OpenAPI\beatleader-api.json" CodeGenerator="NSwagCSharp" Namespace="MapMaven.Core.ApiClients.BeatLeader" ClassName="BeatLeaderApiClient" Options="/UseBaseUrl:false" />
     <OpenApiReference Include="OpenAPI\beatsaver-api.json" CodeGenerator="NSwagCSharp" Namespace="MapMaven.Core.ApiClients.BeatSaver" ClassName="BeatSaverApiClient" Options="/UseBaseUrl:false" />
     <OpenApiReference Include="OpenAPI\scoresaber-api.json" CodeGenerator="NSwagCSharp" Namespace="MapMaven.Core.ApiClients.ScoreSaber" ClassName="ScoreSaberApiClient" />
   </ItemGroup>
