--- a/MapMaven.RankedMapUpdater/MapMaven.RankedMapUpdater.csproj
+++ b/MapMaven.RankedMapUpdater/MapMaven.RankedMapUpdater.csproj
@@ -32,4 +32,7 @@
   <ItemGroup>
     <Using Include="System.Threading.ExecutionContext" Alias="ExecutionContext" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Logging\" />
+  </ItemGroup>
 </Project>
