--- a/MapMaven.DataGatherers.ScoreSaber/MapMaven.DataGatherers.ScoreSaber.csproj
+++ b/MapMaven.DataGatherers.ScoreSaber/MapMaven.DataGatherers.ScoreSaber.csproj
@@ -23,5 +23,10 @@
     <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="RateLimiter" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MapMaven.DataGatherers.Shared\MapMaven.DataGatherers.Shared.csproj" />
   </ItemGroup>
 </Project>
