--- a/MapMaven.DataGatherers.ScoreSaber/appsettings.json
+++ b/MapMaven.DataGatherers.ScoreSaber/appsettings.json
@@ -5,7 +5,9 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Information",
+      "System.Net.Http.HttpClient": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
     }
   }
 }
