--- a/MapMaven.Core/MapMaven.Core.csproj
+++ b/MapMaven.Core/MapMaven.Core.csproj
@@ -40,6 +40,7 @@
     </PackageReference>
     <PackageReference Include="Pather.CSharp" Version="2.1.0" />
     <PackageReference Include="Plotly.NET" Version="3.0.1" />
+    <PackageReference Include="RateLimiter" Version="2.2.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
     <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
     <PackageReference Include="System.Reactive" Version="6.0.0" />
