Unified ML model file extension to mlnet

--- a/MapMaven.Core/MapMaven.Core.csproj
+++ b/MapMaven.Core/MapMaven.Core.csproj
@@ -56,7 +56,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <None Update="ScoreEstimation\ScoreSaberScoreEstimateMLModel.zip">
+    <None Update="ScoreEstimation\ScoreSaberScoreEstimateMLModel.mlnet">
       <DependentUpon>ScoreSaberScoreEstimateMLModel.mbconfig</DependentUpon>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
