--- a/MapMaven.Core/MapMaven.Core.csproj
+++ b/MapMaven.Core/MapMaven.Core.csproj
@@ -27,9 +27,9 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
-    <PackageReference Include="Microsoft.ML" Version="3.0.0-preview.23266.6" />
-    <PackageReference Include="Microsoft.ML.FastTree" Version="3.0.0-preview.23266.6" />
-    <PackageReference Include="Microsoft.ML.LightGbm" Version="2.0.1" />
+    <PackageReference Include="Microsoft.ML" Version="3.0.0" />
+    <PackageReference Include="Microsoft.ML.FastTree" Version="3.0.0" />
+    <PackageReference Include="Microsoft.ML.LightGbm" Version="3.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Utilities" Version="17.7.37355" />
     <PackageReference Include="NAudio" Version="2.2.1" />
     <PackageReference Include="NAudio.Vorbis" Version="1.5.0" />
