Separated build and deploy in workflow

--- a/.github/workflows/map-maven-functions-build.yml
+++ b/.github/workflows/map-maven-functions-build.yml
@@ -1,10 +1,7 @@
-name: Publish Map Maven Functions TEST
+name: Map Maven Functions Build
 on:
-  push:
-    branches:
-    - development
+  workflow_call:
 env:
-  AZURE_FUNCTIONAPP_NAME: map-maven-functions-test
   AZURE_FUNCTIONAPP_PACKAGE_PATH: MapMaven.Functions\published
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 8.0.x
@@ -34,19 +31,3 @@ jobs:
       with:
         name: functionapp
         path: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
-  deploy:
-    runs-on: windows-latest
-    needs: build
-    environment: test
-    steps:
-    - name: Download artifact from build job
-      uses: actions/download-artifact@v3
-      with:
-        name: functionapp
-        path: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
-    - name: Deploy to Azure Function App
-      uses: Azure/functions-action@v1
-      with:
-        app-name: ${{ env.AZURE_FUNCTIONAPP_NAME }}
-        publish-profile: ${{ secrets.MAP_MAVEN_FUNCTIONS_TEST_PUBLISH_PROFILE }}
-        package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
