--- a/MapMaven.Core.Tests/MapMaven.Core.Tests.csproj
+++ b/MapMaven.Core.Tests/MapMaven.Core.Tests.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="MockQueryable.Moq" Version="7.0.0" />
     <PackageReference Include="Moq" Version="4.20.70" />
+    <PackageReference Include="RichardSzalay.MockHttp" Version="7.0.0" />
     <PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="20.0.4" />
     <PackageReference Include="TestableIO.System.IO.Abstractions" Version="20.0.4" />
     <PackageReference Include="TestableIO.System.IO.Abstractions.Wrappers" Version="20.0.4" />
