Updated nuget packages

--- a/MapMaven.Functions/local.settings.json
+++ b/MapMaven.Functions/local.settings.json
@@ -3,6 +3,7 @@
   "Values": {
     "MapMavenStorageConnection": "UseDevelopmentStorage=true",
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
-    "MapMavenStorageContainerName": "mapmaven"
+    "MapMavenStorageContainerName": "mapmaven",
+    "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated"
   }
 }
