--- a/MapMaven.Core/MapMaven.Core.csproj
+++ b/MapMaven.Core/MapMaven.Core.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	<NSwagGenerateExceptionClasses>true</NSwagGenerateExceptionClasses>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="C:\Users\denni\.nuget\packages\naudio.vorbis\1.5.0\contentFiles\any\netstandard2.0\README.md" />
