--- a/MapMaven.Core/MapMaven.Core.csproj
+++ b/MapMaven.Core/MapMaven.Core.csproj
@@ -42,6 +42,7 @@
     <PackageReference Include="Pather.CSharp" Version="2.1.0" />
     <PackageReference Include="Plotly.NET" Version="4.2.0" />
     <PackageReference Include="RateLimiter" Version="2.2.0" />
+    <PackageReference Include="Serilog" Version="3.1.1" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
     <PackageReference Include="System.Drawing.Common" Version="8.0.2" />
     <PackageReference Include="System.Reactive" Version="6.0.0" />
