--- a/MapMaven/MapMaven.csproj
+++ b/MapMaven/MapMaven.csproj
@@ -83,6 +83,7 @@
       <PackageReference Include="BeatSaberPlaylistsLib" Version="1.6.6" />
       <PackageReference Include="Clowd.Squirrel" Version="2.11.1" />
       <PackageReference Include="CodeBeam.MudBlazor.Extensions" Version="6.9.1" />
+      <PackageReference Include="Markdig" Version="0.36.2" />
       <PackageReference Include="Microsoft.AspNetCore.Components.DataAnnotations.Validation" Version="3.2.0-rc1.20223.4" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.3">
         <PrivateAssets>all</PrivateAssets>
