--- a/MapMaven/MapMaven.csproj
+++ b/MapMaven/MapMaven.csproj
@@ -83,7 +83,7 @@
       <PackageReference Include="BeatSaberPlaylistsLib" Version="1.6.6" />
       <PackageReference Include="Blazor-ApexCharts" Version="3.3.0" />
       <PackageReference Include="Clowd.Squirrel" Version="2.11.1" />
-      <PackageReference Include="CodeBeam.MudBlazor.Extensions" Version="6.9.2" />
+      <PackageReference Include="CodeBeam.MudBlazor.Extensions" Version="7.0.0-rc.1" />
       <PackageReference Include="Markdig" Version="0.37.0" />
       <PackageReference Include="Microsoft.AspNetCore.Components.DataAnnotations.Validation" Version="3.2.0-rc1.20223.4" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.6">
