Fix for missing .azurefunctions folder in deployment

--- a/.github/workflows/map-maven-functions-build.yml
+++ b/.github/workflows/map-maven-functions-build.yml
@@ -26,3 +26,5 @@ jobs:
       with:
         name: functionapp
         path: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
+        if-no-files-found: error
+        include-hidden-files: true
