--- a/MapMaven/MapMaven.csproj
+++ b/MapMaven/MapMaven.csproj
@@ -23,6 +23,7 @@
         <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</SupportedOSPlatformVersion>
         <TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
 		<WindowsSdkPackageVersion>10.0.26100.42</WindowsSdkPackageVersion>
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 
 		<WindowsPackageType>None</WindowsPackageType>
     </PropertyGroup>
